--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1608,6 +1608,87 @@
     "Exploratory analysis shows that repayment behavior and credit limits are the strongest indicators of default risk. Defaulters tend to have worse recent repayment status and lower credit limits, while demographic factors such as age, sex, education, and marital status show only modest differences. These insights motivate a predictive modeling approach that prioritizes behavioral and financial variables.\n",
     "\"\"\"\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee30bdb0",
+   "metadata": {},
+   "source": [
+    "## Model development\n",
+    "\n",
+    "We first define the target variable and independent variables \n",
+    "* The target variable represents whether a borrower defaults in the following month. \n",
+    "* The independent set includes borrower demographics, credit capacity, repayment history, and billing information etc\n",
+    "* Identifier variables that do not contain predictive information are removed.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d5a7ce6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define target variable and independent variables\n",
+    "# Define target variable\n",
+    "y = df['default.payment.next.month']\n",
+    "X = df.drop(columns=['ID', 'default.payment.next.month'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ac946aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((30000, 23), (30000,))"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape, y.shape\n",
+    "\n",
+    "# This confirms that the predictors matrix (X) contains 23 independent variables and the target vector (y) contains the binary default outcome for all 30,000 observations.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "a0ce66f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((24000, 23), (6000, 23), (24000,), (6000,))"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Train test split\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.2,      # 80% train, 20% test\n",
+    "    random_state=42,    # reproducibility\n",
+    "    stratify=y          # keeps same default rate in train and test\n",
+    ")\n",
+    "\n",
+    "X_train.shape, X_test.shape, y_train.shape, y_test.shape\n"
+   ]
   }
  ],
  "metadata": {
