added slides on modelling,conclusions and recommendations and a few edits in the notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1936,12 +1936,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "79d5fa65",
+   "metadata": {},
+   "source": [
+    "## Conclusions\n",
+    "1. Recent repayment behavior is the strongest driver of default risk.\n",
+    "2. Higher credit limit reduces default risk (negative coefficient).\n",
+    "3. Recent payment delays are a strong indicator of future default, highlighting the need for early intervention strategies for at-risk customers.\n",
+    "4. Credit limit adjustments should be dynamic, rewarding good repayment behavior and minimizing exposure to high-risk borrowers.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "78683701",
    "metadata": {},
    "source": [
     "## Business recommendations\n",
-    "\n",
-    "The analysis shows that recent repayment behavior is the strongest indicator of future default. Borrowers with recent payment delays are significantly more likely to default in the following month.\n",
     "\n",
     "Based on these findings, the bank/financial institutions should:\n",
     "\n",
